Correcting font, buttons and alignment.

--- a/src/scss/6_components/_obj-promo.scss
+++ b/src/scss/6_components/_obj-promo.scss
@@ -9,8 +9,9 @@
     vertical-align: center;
     text-align: center;
     font-family: $amatic-sc;
+    font-size: 1.2em;
     font-weight: bold;
-    
+
     > i {
         font-size: 4em;
         color: $color-teal-darker;
