--- a/src/scss/6_components/pages/_question.scss
+++ b/src/scss/6_components/pages/_question.scss
@@ -14,7 +14,6 @@
     width: 30%;
     padding: 20px;
     font-family: $amatic-sc;
-
     > h1 {
         font-family: $amatic-sc;
         font-weight: bold;
@@ -34,6 +33,7 @@
         word-wrap: break-word;
         width: 95%;
         font-weight: bold;
+        font-size: 1.2em;
     }
 
     &__icon {
@@ -115,5 +115,25 @@
     width: 20%;
     margin-right: 5%;
     margin-left: 64.2%;
+}
 
+.access-button {
+    width: 10px;
+    height: 50px;
+    margin: 15px auto;
+    background-color: $color-green;
+    color: white;
+    border-radius: 5px;
+    width: 20%;
+
+    &__fonts {
+        font-family: $amatic-sc;
+        font-weight: bold;
+        margin-bottom: 3px;
+        font-size: 1.2em;
+        font-weight: 500;
+        color: black;
+        margin-bottom: 10px;
+        margin-top: 10px;
+    }
 }
